"How can I use H2O?" to "What can I make with H2O?"
"How can I use H2O?" to "What can I make with H2O?"

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@ sharing-image: images/h2o-logo.svg
     <h3 id="how">How does H2O work?</h3>
     <p>You can use H2O to create casebooks, reading lists, course outlines, syllabi, and more. H2O gives authors access to the entire database of U.S. court decisions made available through the <a href="https://case.law" target="_blank">CaseLaw Access Project</a>, another initiative of the Library Innovation Lab. Authors can pull any of those cases into their casebooks, together with their own texts and links to external sources on the web. These casebooks, in turn, are free to access and can be copied, shared and adapted under a <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank">CC BY-NC-SA 3.0 license</a>. In addition, H2O's software is open source and available on <a href="https://github.com/harvard-lil/h2o" target="_blank">Github</a>. </p>
 
-    <h3>How can I use H2O?</h3>
+    <h3>What can I make with H2O?</h3>
     <p>You can use H2O to create casebooks, reading lists, course outlines, syllabi, and more. 
     
     <h2 id="making-casebooks">Making Casebooks</h2>
