Fresh IDs and toc entries for new videos

--- a/app/other-resources.html
+++ b/app/other-resources.html
@@ -21,7 +21,9 @@ sharing-image: images/h2o-logo.svg
               <li><a href="#adding-resources-video">Adding Resources</a></li>
               <li ><a href="#annotating-video">Annotating</a></li>
               <li><a href="#moving-items-video">Moving Items</a></li>
+              <li><a href="#adding-collaborators">Adding Collaborators</a></li>
               <li><a href="#publishing-video">Publishing</a></li>
+              <li><a href="#printing-casebooks">Printing</a></li>
           </ul>
       </li>
       <li><a href="#video-intro">Video Introduction</a></li>
@@ -60,7 +62,7 @@ sharing-image: images/h2o-logo.svg
             <p><a href="https://vimeo.com/293212050">H2O: Moving Casebook Items</a> from <a href="https://vimeo.com/user7144664">Harvard Library Innovation Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </li>
            <li>
-            <h3 id="moving-items-video">Adding Collaborators</h3>
+            <h3 id="adding-collaborators">Adding Collaborators</h3>
             <iframe src="https://player.vimeo.com/video/463884497" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             <p><a href="https://vimeo.com/463884497">H2O: Adding Collaborators to Your Casebook</a> from <a href="https://vimeo.com/user7144664">Harvard Library Innovation Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </li>
@@ -70,7 +72,7 @@ sharing-image: images/h2o-logo.svg
             <p><a href="https://vimeo.com/293212062">H2O: Making Your Casebook Public</a> from <a href="https://vimeo.com/user7144664">Harvard Library Innovation Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </li>
         <li>
-            <h3 id="moving-items-video">Printing Your Casebook</h3>
+            <h3 id="printing-casebooks">Printing Your Casebook</h3>
             <iframe src="https://player.vimeo.com/video/464364114" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
             <p><a href="https://vimeo.com/464364114">H2O: Printing Your Casebook</a> from <a href="https://vimeo.com/user7144664">Harvard Library Innovation Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </li>
